--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <div class="box-wrapper">
-      <div class=" box small-box"></div>
+      <div class=" box small"></div>
       <div class=" box small-box"></div>
       <div class=" box small-box"></div>
       </div>
